Added monthly anniversary countdown

--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Ballet:opsz@16..72&family=DM+Serif+Text:ital@0;1&family=Imperial+Script&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Reenie+Beanie&display=swap" rel="stylesheet">
-    <title>💌</title>
+    <title>Love Letters For You 💌</title>
 </head>
 <body>
     <h1>Love Letters For You.</h1>
-    <p id="love-letter-emoji">💌</span> 
+     <div id="countdown-container">
+        <p id="month-message">Our next monthlyversary is in... <span id="countdown"></span> days ;)</p>
+     </div>
     <div class="container">
         <h2>Dear Ming,</h1>
-
         <div class="wrapper">
             <div class="lid one"></div>
             <div class="lid two"></div>
@@ -23,7 +24,6 @@
                 <p id="letter">Click below to receive love from me!</p>
             </div>
         </div>
-
         <div class="box-1" onclick="generateLetter()">
             <div class="btn-one">
               <span>Give Me Love!</span>
@@ -32,6 +32,7 @@
         </div>
     </div>
     <p id="miss-you">Missing you already, J.</p>
+    <p id="love-letter-emoji">💌</p>
 </body>
 <script src="script.js"></script>
 </html>
