--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <h1>Love Letters For You.</h1>
      <div id="countdown-container">
-        <p id="month-message">Our next monthlyversary is in... <span id="countdown"></span> days ;)</p>
+        <p id="month-message">Our next monthlyversary is in... <span id="countdown"></span> ;)</p>
      </div>
     <div class="container">
         <h2>Dear Ming,</h1>
