--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
         </div>
         <div class="box-1" onclick="generateLetter()">
-            <audio id="pop-sound" src="assets/bubble-pop.mp3"></audio>
+            <audio id="pop-sound" src="sounds/bubble-pop.mp3"></audio>
             <div class="btn-one">
               <span>Give Me Love!</span>
               <span>❤️</span>
